...

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:background="@drawable/white"
        tools:context=".LoginPage">

...
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin"
            app:layout_constraintVertical_bias="0.077" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextUsernameLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="84dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietUsernameLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:ems="10"
                android:hint="Username" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldPasswordLogin"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="16dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsernameLogin"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:inputType="textPassword"
                android:paddingEnd="40dp" />

...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPasswordLogin"
            app:layout_constraintVertical_bias="0.089999974" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="325dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="LOGIN"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClear"
            app:layout_constraintVertical_bias="0.01999998" />
...
