<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addPocketFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addPocketFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...
            android:id="@+id/imageView4"
            android:layout_width="278dp"
            android:layout_height="362dp"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="21dp"
            android:src="@drawable/add_pic"
            app:layout_constraintBottom_toTopOf="@+id/etPocketBalance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toEndOf="@+id/txtAddPocket"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

...
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.127" />

        <EditText
            android:id="@+id/etPocketName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:ems="10"
            android:hint="Pocket Name"
            android:inputType="textPersonName"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPocketName"
            app:layout_constraintVertical_bias="0.151"
            app:prefix="$" />

        <Button
            android:id="@+id/btnAddPocket"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="ADD POCKET"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPocketBalance"
            app:layout_constraintVertical_bias="0.204"
...
